# vocode-python

./: pyproject.toml
apps/telegram_bot/: main.py
playground/streaming/agent/: chat.py
tests/streaming/agent/: test_utils.py
tests/synthesizer/: test_eleven_labs.py
vocode/streaming/: streaming_conversation.py
vocode/streaming/action/: nylas_send_email.py  transfer_call.py
vocode/streaming/agent/: anthropic_agent.py  base_agent.py  bot_sentiment_analyser.py  chat_gpt_agent.py  llamacpp_agent.py  llm_agent.py  utils.py
vocode/streaming/models/: actions.py  agent.py  model.py  synthesizer.py  transcriber.py  transcript.py
vocode/streaming/telephony/server/: base.py
vocode/streaming/user_implemented_agent/: restful_agent.py
vocode/streaming/utils/: goodbye_model.py
