[tool.poetry]
name = "vocode"
version = "0.1.111"
description = "The all-in-one voice SDK"
authors = ["Ajay Raj <ajay@vocode.dev>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/vocodedev/vocode-python"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydub = "^0.25.1"
nltk = "^3.8.1"
openai = "^1.8.0"
sounddevice = "^0.4.6"
azure-cognitiveservices-speech = "^1.34.1"
websockets = "^12.0.0"
requests = "2.31.0"
uvicorn = ">=0.25.0"
fastapi = ">=0.100.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.9"
six = "^1.16.0"
opentelemetry-sdk = "^1.17.0"
janus = "^1.0.0"
scipy = "^1.12.0"
anthropic = ">=0.11.0"

elevenlabs = { version = "^0.2.27", optional = true }
google-cloud-texttospeech = { version = "^2.15.1", optional = true }
gtts = { version = "^2.5.0", optional = true }

google-cloud-speech = { version = "^2.23.0", optional = true }

redis = { version = "^4.6.0", optional = true }
twilio = { version = "^8.12.0", optional = true }
vonage = { version = "^3.13.0", optional = true }
nylas = { version = "^5.14.1", optional = true }
speechrecognition = "^3.10.1"
aiohttp = "^3.9.3"
langchain = "^0.1.0"
google-cloud-aiplatform = { version = "^1.40.0", optional = true }
miniaudio = "^1.59"
boto3 = "^1.34.29"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"


[tool.poetry.group.lint.dependencies]
black = "^23.12.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "8.0.1"
pytest-asyncio = "^0.23.5"
aioresponses = "^0.7.4"
pre-commit = "^3.6.0"


[tool.poetry.group.typing.dependencies]
mypy = "^1.3.0"
pydub-stubs = "^0.25.1.1"
types-requests = "^2.30.0.0"
types-regex = "^2023.5.5.0"
types-redis = "^4.6.0.11"

[tool.mypy]
ignore_missing_imports = "True"
exclude = ["venv", ".venv"]
explicit_package_bases = "True"


[tool.poetry.extras]
synthesizers = ["gtts", "google-cloud-texttospeech", "elevenlabs"]
transcribers = ["google-cloud-speech"]
telephony = ["twilio", "redis", "vonage"]
agents = ["google-cloud-aiplatform"]
actions = ["nylas"]
all = [
    "gtts",
    "google-cloud-texttospeech",
    "elevenlabs",
    "google-cloud-speech",
    "google-cloud-aiplatform",
    "twilio",
    "redis",
    "nylas",
    "vonage",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
